# portland

./: AGENT.md  Brewfile  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
compiler/: evaluator.pdx  lexer.pdx  parse.pdx  parser.pdx  run.pdx  tokenize.pdx
crate/: Cargo.toml  README.md
crate/src/: lib.rs
docs/: DECISIONS.md  DESIGN.md  STAGE0.md
docs/adr/: 0001-2026-07-20-mutable-keyword.md  0002-2026-07-20-together-task-sigil.md  0003-2026-07-20-bitwise-operators-out.md  0004-2026-07-20-together-meanwhile.md  0005-2026-07-22-optionals-wrapper-model.md  0006-2026-07-22-absence-word-nil.md  0007-2026-07-22-or-and-not-dead-identical.md  0008-2026-07-22-unwrap-toolkit.md  0009-2026-07-22-presence-word-some.md  0010-2026-07-22-partial-operations-return-maybes.md  0011-2026-07-22-together-single-register.md  0012-2026-07-22-branchless-if-is-nil.md  0013-2026-07-22-case-in-spec.md  0014-2026-07-22-keyword-arguments.md  0015-2026-07-23-values-never-mutate.md  README.md  (+6 more)
script/: bootstrap  cibuild  console  test
seed/: Cargo.toml
todos/: 001-squat-namespaces.md  002-brand-story.md  003-bikeshed-mutability-keyword.md  004-bikeshed-concurrency-sigil.md  005-bikeshed-absence-word.md  006-compile-pipeline-design.md  007-port-prism-lexer.md  008-grammar-and-ast.md  009-stage-0-subset.md  010-type-inference.md  011-immutability-semantics.md  012-together-semantics.md  013-memory-safety-mte.md  014-heterogeneous-dispatch.md  015-compile-time-macros.md  016-repo-scaffolding.md  017-register-domains.md  018-toward-stage-1.md  README.md
(+41 files in other folders)
