[package]
name = "portland"
version = "0.0.0"
edition = "2024"
description = "Placeholder for Portland, a joyful programming language for Apple silicon. Nothing here yet."
homepage = "https://github.com/portlandlang"
repository = "https://github.com/portlandlang"
license = "MIT OR Apache-2.0"
keywords = ["portland", "language", "compiler", "apple-silicon"]
categories = ["compilers"]

[dependencies]
